welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: value update is not a member of Int
  while(getX()=6 && getY()= 0)
        ^SnakeBuggle:3: error: value && is not a member of Int
  while(getX()=6 && getY()= 0)
                 ^