welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  baisseBrosse()
  while(getX()=6 && getY()= 0)
  avancer()
}

def avancer(){
  while(!estFaceMur() )
  avance()
  if (estFaceMur()){
    if (getDirection()== Direction.EST){
      gauche()
      avance()
      gauche()}
    else if (getDirection()==Direction.OUEST){
      droite()
      avance()
      droite()
    }
  }
}